--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,109 +15,54 @@ name = "pytorch"
 url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
-
 [[tool.uv.index]]
 name = "pypi"
 url = "https://pypi.org/simple"
 
 [project]
-name = "vieneu"
+name = "viettts-tinhthe"
 version = "1.1.7"
-description = "Advanced on-device Vietnamese TTS with instant voice cloning"
+description = "VietTTS by Tinhthe - Advanced on-device Vietnamese TTS"
 readme = "README_PYPI.md"
 license = { file = "LICENSE" }
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: Developers",
-    "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Topic :: Multimedia :: Sound/Audio :: Speech",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Operating System :: OS Independent",
-]
-keywords = [
-    "text-to-speech",
-    "tts",
-    "vietnamese",
-    "voice-cloning",
-    "speech-synthesis",
-    "real-time",
-    "on-device"
-]
-authors = [
-    { name = "Phạm Nguyễn Ngọc Bảo", email = "pnnbao@gmail.com" }
-]
 requires-python = ">=3.10"
+# --- PHẦN NÀY QUAN TRỌNG ĐỂ KHÔNG BỊ LỖI MODULE ---
 dependencies = [
     "phonemizer>=3.3.0",
-    "neucodec>=0.0.4",
+    "neucodec>=0.0.1",
+    "vieneu-utils",
     "librosa>=0.11.0",
-    "gradio>=5.49.1",
-    "onnxruntime>=1.23.2",
-    "datasets>=3.2.0",
+    "gradio>=5.0.0",
+    "onnxruntime>=1.16.0",
+    "datasets>=3.0.0",
     "torch",
     "torchaudio",
     "perth>=0.2.0",
-    "llama-cpp-python==0.3.16",
+    "llama-cpp-python>=0.2.0",
     "requests",
+    "pyyaml",
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pnnbao97/VieNeu-TTS"
-"Repository" = "https://github.com/pnnbao97/VieNeu-TTS"
-"Bug Tracker" = "https://github.com/pnnbao97/VieNeu-TTS/issues"
-"Documentation" = "https://github.com/pnnbao97/VieNeu-TTS/blob/main/README.md"
-"Source Code" = "https://github.com/pnnbao97/VieNeu-TTS"
-"Changelog" = "https://github.com/pnnbao97/VieNeu-TTS/releases"
+"Homepage" = "https://github.com/ninjavanxuantruong/viettts"
+"Repository" = "https://github.com/ninjavanxuantruong/viettts"
 
 [project.optional-dependencies]
 gpu = [
     "lmdeploy; sys_platform != 'darwin'",
-    "triton-windows; sys_platform == 'win32'",
-    "triton; sys_platform == 'linux'",
-    "transformers; sys_platform == 'darwin'",
-    "accelerate; sys_platform == 'darwin'",
-]
-
-[dependency-groups]
-gpu = [
-    "lmdeploy; sys_platform != 'darwin'",
-    "triton-windows; sys_platform == 'win32'",
-    "triton; sys_platform == 'linux'",
-    "transformers; sys_platform == 'darwin'",
-    "accelerate; sys_platform == 'darwin'",
+    "transformers",
+    "accelerate",
 ]
 
 [tool.setuptools]
 packages = ["vieneu", "vieneu_utils"]
 
-[tool.setuptools.package-data]
-vieneu_utils = ["*.json"]
-vieneu = ["assets/samples/*"]
-
 [tool.uv.sources]
-
 torch = [
     { index = "pytorch", marker = "sys_platform != 'darwin'" },
     { index = "pypi", marker = "sys_platform == 'darwin'" }
 ]
-
 torchaudio = [
     { index = "pytorch", marker = "sys_platform != 'darwin'" },
     { index = "pypi", marker = "sys_platform == 'darwin'" }
-]
-
-lmdeploy = [
-    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-manylinux2014_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.12'" },
-    { index = "pypi", marker = "sys_platform == 'darwin'" }
-]
-
-llama-cpp-python = [
-    { url = "https://github.com/pnnbao97/VieNeu-TTS/releases/download/wheels-v0.3.16/llama_cpp_python-0.3.16-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-    { index = "pypi", marker = "sys_platform != 'win32'" }
 ]
